--- a/css/styles.css
+++ b/css/styles.css
@@ -2,19 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /*=============== VARIABLES CSS ===============*/
 :root {
-    --header-height: 6.25rem;
+    --header-height: 5.25rem;
 
     /*========== Colors ==========*/
     /*Color mode HSL(hue, saturation, lightness)*/
-    --first-color: hsl(204, 93%, 48%);
+    --first-color: hsl(204, 95%, 48%);
     --second-color: hsl(198 99% 42%);
     --first-gradient: linear-gradient(90deg,
                     hsl(205, 98%, 23%),
                     hsl(198, 99%, 42%));
-    --title-color: hsl(255, 12%, 12%);
+    --title-color: hsl(256, 95%, 8%);
     --text-color: hsl(225, 12%, 24%);
     --text-color-light: hsl(255, 4%, 70%);
-    --body-color: hsl(256, 100%, 18%);
+    --body-color: hsl(0, 0%, 100%);
     --container-color: hsl(0, 0%, 100%);
     --white-color: hsl(198, 99%, 100%);
     --blue-color: hsl(256, 100%, 18%);
@@ -150,8 +150,8 @@ img {
     display: flex;
     align-items: center;
     column-gap: 25rem;
-    max-height: 7vh;
-    margin-left: 8vw;
+    max-height: 6vh;
+    margin-left: 5vw;
     padding: 10px;
 }
 
@@ -169,7 +169,7 @@ img {
         position: fixed;
         top: 0;
         right: -100%;
-        background-color: var(--body-color);
+        background-color: var(--blue-color);
         width: 70%;
         height: 100%;
         padding: 7.5rem 3.5rem 0;
@@ -205,13 +205,95 @@ img {
 }
 
 /* Change background header */
+.bg-header {
+    box-shadow: 0 4px 16px hsla(194, 100%, 49%, 0.345);
+}
 
+.bg-header .nav__logo,
+.bg-header .nav__toggle {
+    color: var(--first-color);
+}
 
 /* Active link */
 
 
 /*=============== HOME ===============*/
+.home {
+    position: relative;
+    background-color: var(--blue-color);
+}
 
+.home__container {
+    position: relative;
+    row-gap: 3rem;
+    padding-block: 2.5rem 6rem;
+}
+
+.home__content {
+    row-gap: 2.5rem;
+} 
+
+.home__data {
+    text-align: center;
+}
+
+.home__title {
+    color: var(--white-color);
+    font-size: var(--big-font-size);
+    font-weight: var(--font-bold);
+    margin-bottom: 1rem;
+}
+
+.home__description {
+    margin-bottom: 2.5rem;
+    color: var(--text-color-light)
+}
+
+.home__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.home__info {
+    display: flex;
+    justify-content: center;
+    column-gap: 4.5rem;
+}
+
+.home__info-title {
+    color: var(--second-color);
+    font-size: var(--big-font-size);
+    font-weight: var(--font-bold);
+    margin-bottom: .5rem;
+}
+
+.home__info-description {
+    font-size: var(--small-font-size);
+    color: var(--white-color);
+    text-align: center;
+}
+
+.home__images {
+    position: relative;
+    justify-self: center;
+}
+
+.home__img-1 {
+    width: 310px;
+    margin-left: 3.5rem;
+    border-radius: 10px;
+}
+
+.home__img-2 {
+    width: 250px;
+    border: 5px solid var(--blue-color);
+    position: absolute;
+    left: 0;
+    bottom: -3.5rem;
+    border-radius: 10px;
+}
 
 /*=============== BUTTON ===============*/
 .button {
@@ -229,7 +311,87 @@ img {
     color: var(--white-color);
 }
 
+.button__link {
+    display: flex;
+    align-items: center;
+    column-gap: .25rem;
+    color: var(--first-color);
+}
+
+.button__link span {
+    font-weight: var(--font-semi-bold);
+}
+
+.button__link i {
+    font-size: 1.5rem;
+    transition: transform .4s;
+}
+
+.button__link:hover i {
+    transform: translateX(.25rem);
+}
 /*=============== ABOUT ===============*/
+.about__container {
+    row-gap: 8rem;
+}
+
+.about__data {
+    text-align: center;
+    margin-top: -2rem;
+}
+
+.section__subtitle {
+    font-size: 1.9rem;
+}
+
+.section__title {
+    font-size: 1.3rem;
+    margin-top: 2rem;
+}
+
+.about__description {
+    margin-bottom: 2rem;
+}
+
+.about__list {
+    text-align: initial;
+    grid-template-columns: repeat(2, 150px);
+    justify-content: center;
+    gap: 1.5rem;
+    margin-bottom: 2.5rem;
+}
+
+.about__list-item {
+    display: flex;
+    column-gap: 1rem;
+    color: var(--title-color);
+}
+
+.about__list-item i {
+    font-size: 1.25rem;
+    color: var(--first-color);
+}
+
+.about__images {
+    position: relative;
+    justify-content: center;
+}
+
+.about__img-1 {
+    width: 310px;
+    margin-left: 2.1rem;
+    margin-top: -4rem;
+    border-radius: 10px;
+}
+
+.about__img-2 {
+    width: 250px;
+    border: 5px solid var(--white-color);
+    position: absolute;
+    left: 8.5rem;
+    bottom: -3.5rem;
+    border-radius: 10px;
+}
 
 
 /*=============== SERVICES ===============*/
